Update UI And Finished CreateWalls

--- a/Tools/Assets/_Tools/3DRoomConstructor/Editor/RoomConstructorUXML.uxml
+++ b/Tools/Assets/_Tools/3DRoomConstructor/Editor/RoomConstructorUXML.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <ui:VisualElement name="VisualElement" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);">
-        <ui:Label tabindex="-1" text="CurrentState: " display-tooltip-when-elided="true" />
+        <ui:Label tabindex="-1" text="Current Mode:" display-tooltip-when-elided="true" name="CurrentMode" />
         <ui:Button text="Walls" display-tooltip-when-elided="true" name="CreateWallsButton" style="height: 49px; width: 56px;" />
         <ui:Foldout text="Create Walls Settings" name="CreateWalls">
             <ui:FloatField label="Wall Thickness" value="2" name="WallThickness" />
