--- a/Tools/Assets/_Tools/LevelEditor/LevelEditor.uxml
+++ b/Tools/Assets/_Tools/LevelEditor/LevelEditor.uxml
@@ -4,6 +4,8 @@
         <ui:Button text="Eraser" display-tooltip-when-elided="true" name="EraserButton" style="height: 49px; width: 56px;" />
     </ui:VisualElement>
     <ui:Label tabindex="-1" text="Current Mode:" display-tooltip-when-elided="true" name="CurrentMode" />
+    <ui:Toggle label="GridSnap" name="GridSnapToggle" value="true" style="height: 31px; width: 182px;" />
+    <ui:FloatField label="GridSize" value="1" name="GridSizeField" style="-unity-text-align: middle-left; align-items: center; flex-direction: row;" />
     <ui:Foldout text="Create Walls Settings" name="CreateWalls">
         <ui:FloatField label="Wall Thickness" value="0.5" name="WallThickness" />
         <ui:FloatField label="Wall Height" value="5" name="WallHeight" />
