Update DS Node Styles

--- a/Tools/Assets/_Tools/Mik's Easy Dialogue System/Resources/DialogueNodeStyleSheet.uss
+++ b/Tools/Assets/_Tools/Mik's Easy Dialogue System/Resources/DialogueNodeStyleSheet.uss
@@ -1,9 +1,27 @@
-.d-node__main-container {
-	/*background-color: #515157;
-	padding: 8px;*/
+/* DIALOGUE NODE */
+.dialogue-node__main-container {
+	background-color: #363848;
 }
 
-.d-node__extension-container {
-	/*background-color: #333d35;
-	padding: 8px;*/
+.dialogue-node__extension-container {
+	padding: 8px;
+}
+
+.dialogue-node__textfield > .unity-text-field__input {
+	background-color: #2c2a38;
+}
+
+/* START NODE */
+.start-node__main-container {
+	background-color: #523c3f;
+	align-content: center;
+}
+
+.start-node__title-container {
+	background-color: #332222;
+	justify-content: center;
+}
+
+.start-node__textfield > .unity-text-field__input {
+	padding: 4px;
 }
